feat: add support for VC DataModel 2.0 (#522)
* feat: support VC DataModel 2.0

* add VP generator for Enveloped VPs

* license headers

* docs

* trigger ci

* checkstyle

* test: update api versio json files